# kai-compiler

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  TODO.md  build.c  kai.h  kai_dev.h  new-build.c  premake5.lua  readme.md
cmake/: wasm.cmake
demo/: constants.kai  premake5.lua  test.kai
include/: kai.h  kai_dev.h
kai/: CMakeLists.txt  main.c  premake5.lua  timer.h
kai/kai.dSYM/Contents/: Info.plist
kai/kai.dSYM/Contents/Resources/DWARF/: kai
kai/kai.dSYM/Contents/Resources/Relocations/aarch64/: kai.yml
kai/old/: bytecode_interpreter.cpp  bytecode_stream.cpp  bytecode_stream.hpp  dependency_graph.cpp  dependency_graph.hpp
kai/src/: builtin_types.h  builtin_types.hpp  bytecode_interpreter.cpp  bytecode_interpreter.hpp  bytecode_stream.cpp  bytecode_stream.hpp  compiler.h  compiler_context.hpp  config.h  config.hpp  core.c  core.cpp  debug.cpp  dependency_graph.cpp  dependency_graph.hpp  generation.cpp  generation.hpp  lexer.cpp  lexer.hpp  main.c  memory.c  parser.c  parser.cpp  parser.hpp  platform.h  program.c  program.hpp  timer.c  token.c  token.h  unimplemented.c
kai/src/backend/: x86_64.cpp
kai/src/debug/: clib_writer.c  clib_writer.cpp  debug_write_tree.cpp  tree_traverser.hpp  write_error.c  write_error.cpp  write_tree.c
kai/src/platform/: linux.cpp  windows.cpp
playground/: Intro.kai  index.html  lib.c  lib.opt.wasm  lib.wasm  wasm.h
reference/: TODO.md  build  build.c  build.old  code_that_might_be_useful.c  ideas.kai  language-grammer.txt  language-guide.md  language-reference.md  language_guide.md  machine_code_gen.c  main.cpp  notes.txt  overloading.txt  type-system.md  types.txt
src/: CMakeLists.txt  allocator.c  allocator.h  allocator.kai  builtin.kai  builtin_types.h  bytecode.h  bytecode_interpreter.c  bytecode_stream.c  c.kai  codegen.kai  compiler.h  compiler.kai  config.h  core.c  core.kai  intrinsics.h  ldexp.c  machine_amd64.c  machine_arm64.c  machine_x86_64.c  macros.h  memory.c  memory.kai  new-allocator.kai  new-core.kai  new-writer.kai  parser.c  parser.kai  program.c  program.h  program.kai  temp.kai  token.c  token.h  unimplemented.c  writer.kai
src/comments/: footer.h  header.h
src/debug/: debug.c  write_error.c  write_tree.c  write_type.c  writer.c
tests/: 00-able-to-compile.c  01-create-program.c  01-internal-hash-table.c  01-simple.c  02-simple-import.c  03-simple-import-float.c  04-simple-procedures.c  05-internal-hash-table.c  05-new-build.c  05-simple-procedures.c  06-simple-dependencies.c  07-type-hashing.c  10-example-basic.cpp  CMakeLists.txt  basic.kai  main.c  test.h  test_bytecode.c  test_compile.c  test_hashtable.c  test_number.c  test_parser.c
tools/: build.bat  build.fish  build.ps1  build.sh  count.bat  count.sh  findhash.c  generate.py  generate_header.py  hash.cpp  keyword_hash.py  licenses.txt  make_win32_proj.bat  rename.py  (+11 more)
(+50 files in other folders)
